--- a/CustomizeUIcollectionView/CustomizeUIcollectionView/Base.lproj/Main.storyboard
+++ b/CustomizeUIcollectionView/CustomizeUIcollectionView/Base.lproj/Main.storyboard
@@ -32,20 +32,40 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="TEk-bo-WRT">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="TEk-bo-WRT" customClass="CollectionViewCell" customModule="CustomizeUIcollectionView" customModuleProvider="target">
                                         <rect key="frame" x="93.5" y="0.0" width="188" height="173"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="188" height="173"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmn-7v-rsu">
+                                                    <rect key="frame" x="0.0" y="0.0" width="188" height="173"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="qmn-7v-rsu" secondAttribute="trailing" id="BON-dW-rJN"/>
+                                            <constraint firstItem="qmn-7v-rsu" firstAttribute="top" secondItem="TEk-bo-WRT" secondAttribute="top" id="HcT-HB-kO0"/>
+                                            <constraint firstAttribute="bottom" secondItem="qmn-7v-rsu" secondAttribute="bottom" id="LRv-Mf-OmU"/>
+                                            <constraint firstItem="qmn-7v-rsu" firstAttribute="leading" secondItem="TEk-bo-WRT" secondAttribute="leading" id="WAU-ga-MNs"/>
+                                        </constraints>
                                         <size key="customSize" width="188" height="173"/>
+                                        <connections>
+                                            <outlet property="myLabel" destination="qmn-7v-rsu" id="cpj-zw-2E4"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="txU-fJ-Lrf" id="RNH-5C-nEl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
